fix: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -130,3 +130,13 @@
 .rotate-y-6 {
   transform: rotateY(6deg);
 }
+
+html, body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
